force-app/main/default/objects/PhotoEvidence__c/PhotoEvidence__c.object-meta.xml
<CustomObject>
    <label>Photo Evidence</label>
    <pluralLabel>Photo Evidences</pluralLabel>
    <nameField>
        <displayFormat>PE-{0000}</displayFormat>
        <label>Photo Evidence Name</label>
        <type>AutoNumber</type>
    </nameField>
    <searchStatus>Active</searchStatus>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>Visit__c</fullName>
        <label>Visit</label>
        <referenceTo>Visit__c</referenceTo>
        <relationshipLabel>Photo Evidences</relationshipLabel>
        <relationshipName>PhotoEvidences</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ContentVersionId__c</fullName>
        <label>Content Version ID</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LabelsJSON__c</fullName>
        <label>Labels JSON</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
</CustomObject>