force-app/main/default/objects/PhotoEvidence__c/fields/LabelsJSON__c.field-meta.xml
<CustomField>
    <fullName>LabelsJSON__c</fullName>
    <label>LabelsJSON</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>